--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,17 +16,18 @@
 
     <ImageButton
         android:id="@+id/normal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="61dp"
+        android:layout_height="52dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_toStartOf="@+id/button2"
+        android:layout_marginStart="70dp"
         android:onClick="normalButton"
         app:srcCompat="@drawable/lead_pencil" />
 
     <ImageButton
         android:id="@+id/erase"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="53dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:onClick="eraseButton"
@@ -34,21 +35,23 @@
 
     <ImageButton
         android:id="@+id/clear"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="62dp"
+        android:layout_height="53dp"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/button2"
+        android:layout_marginEnd="70dp"
         android:onClick="clearButton"
         app:srcCompat="@drawable/restart" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="106dp"
+        android:layout_height="59dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:onClick="doneButton"
-        android:text="Done" />
+        android:text="Done"
+        android:textSize="20dp" />
 
 
 </RelativeLayout>
