--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -9,18 +9,18 @@
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="346dp"
+        android:layout_height="372dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="202dp" />
+        android:layout_marginTop="176dp" />
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="309dp"
-        android:layout_height="127dp"
-        android:layout_above="@+id/textGuess"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="-141dp"
+        android:layout_width="251dp"
+        android:layout_height="65dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="93dp"
         app:srcCompat="@drawable/google2" />
 
     <TextView
@@ -28,8 +28,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="141dp"
+        android:layout_marginTop="109dp"
+        android:layout_toEndOf="@+id/goBackButton"
         android:gravity="center"
         android:text="TextView"
         android:textAlignment="center"
@@ -45,5 +45,18 @@
         android:onClick="goBackButton"
         android:text="Try Again"
         android:textSize="15dp"/>
+
+    <TextView
+        android:id="@+id/yourGuessText"
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="11dp"
+        android:gravity="center"
+        android:maxLines="10"
+        android:text="TextView"
+        android:textColor="@android:color/holo_green_dark"
+        android:textSize="20dp" />
 
 </RelativeLayout>
